public_html/layout/nouveau/style.css
/* ... */
.ext-link {
background-color:transparent;
background:url(./images/external.png) right center no-repeat;
background-attachment:scroll;
padding-right:13px;
}

.strike {
text-decoration:line-through;
}

.checkboxes-list span {
padding-left:5px;
}

.codeblock {
background-color:#ECE9D8;
color:#000;
width:550px;
height:160px;
overflow:auto;
min-height:50px;
max-height:120px;
border:1px dashed #000;
margin:5px 0 5px 5px;
padding:5px;
}

.quotemain {
background:#FAFCFE;
border:1px solid #8394B2;
border-left:5px solid #8394B2;
color:#465584;
margin:5px auto 8px;
padding:4px;
}

.quotemain img {
float:right;
padding:5px;
}

div .php {
max-height:400px;
overflow:auto;
height:auto;
width:auto;
min-height:100px;
}

#ft,.clearboth {
clear:both;
}

#yui-main,.moderation-cc {
width:100%;
}

.yui-g .yui-u,.yui-g .yui-g,.yui-g .yui-gb,.yui-g .yui-gc,.yui-g .yui-gd,.yui-g .yui-ge,.yui-g .yui-gf,.yui-gc .yui-u,.yui-gd .yui-g,.yui-g .yui-gc .yui-u,.yui-ge .yui-u,.yui-ge .yui-g,.yui-gf .yui-g,.yui-gf .yui-u,.yui-gb .yui-ge div.yui-u,.yui-gb .yui-gf div.yui-u {
float:right;
}

.yui-g div.first,.yui-gb div.first,.yui-gc div.first,.yui-gd div.first,.yui-ge div.first,.yui-gf div.first,.yui-g .yui-gc div.first,.yui-g .yui-ge div.first,.yui-gc div.first div.first,.yui-gb .yui-ge div.first,.yui-gb .yui-gf div.first {
float:left;
}

.yui-gc div.first,.yui-gd .yui-u,.yui-g .yui-gc div.first,.yui-gd .yui-g {
width:66%;
}

.yui-gd div.first,s .yui-gb .yui-gd div.first,.yui-ge div.first .yui-gd div.first {
width:32%;
}

.yui-ge div.first,.yui-gf .yui-u,.yui-gf .yui-g {
width:74.199997%;
}

.yui-ge .yui-u,.yui-gf div.first,.yui-ge .yui-g {
width:24%;
}

.yui-g .yui-gb div.first,.yui-gb div.first,.yui-gc div.first,.yui-gd div.first,.yui-gb .yui-g div.first,.yui-gb .yui-gb div.first,ul {
margin-left:0;
}

.yui-g .yui-g .yui-u,.yui-gb .yui-g .yui-u,.yui-gc .yui-g .yui-u,.yui-gd .yui-g .yui-u,.yui-ge .yui-g .yui-u,.yui-gf .yui-g .yui-u,.yui-gc .yui-g .yui-u,.yui-gd .yui-g .yui-u {
margin-left:0;
width:48.099998%;
}

.yui-gb .yui-ge .yui-u,.yui-gb .yui-gf .yui-u,.admin-list-table form {
margin:0;
}

#bd:after,.yui-g:after,.yui-gb:after,.yui-gc:after,.yui-gd:after,.yui-ge:after,.yui-gf:after,.clearfix:after {
clear:both;
content:".";
display:block;
height:0;
visibility:hidden;
}

a,.gl_blockstyle2 .block-box-left h2,.gl_blockstyle2 .block-box-right h2 {
background:transparent;
}

fieldset legend,input,.searchform-elements input,.pluginSmallText {
font-size:.9em;
}

form label,.b,.checkboxes-list .gldefault {
/*font-weight:700;*/
}

img,table {
border:0;
}

.gl_user-menu-left,.alignleft {
text-align:left;
}

.aligncenter,.edit-perm-down,.pagenav,.row_center td {
text-align:center;
}

.aligntop,.plugin tr,.pluginSubTable tr {
vertical-align:top;
}

.gl_blockstyle3 .block-box-left h2,.gl_blockstyle3 .block-box-right h2,.hidden,a.tooltip span,#gl_moospring .gl_moospring span {
display:none;
}

.list-feed li,.topicoption,.topicoption-off {
list-style:none;
}

.searchdate,.searchhits {
background:transparent;
color:#000;
text-align:right;
}

.pluginAltBG td,.pluginAltText {
color:#FFF;
}

.pluginRow1,.pluginRow1 td,.pluginRow1 .pluginRollOut,.pluginRow2 .pluginRollOut,.pluginRollOut {
background:#FFF;
color:#000;
line-height:120%;
}

.pluginLinks A:link,.pluginLinks A:visited {
color:#000;
font-style:normal;
font-weight:400;
text-decoration:none;
}

.pluginBreadCrumbs,.pluginBreadCrumbs A:link,.pluginBreadCrumbs A:visited,.pluginBreadCrumbs A:hover {
color:#FFF;
font-style:normal;
font-weight:400;
text-decoration:none;
}

#gl_moomenu a:hover,#gl_mooticker a {
text-decoration:none;
}

#gl_moorotator .controls img,#gl_mooticker .controls img {
background-image:url(images/gl_mooticker_controls.png);
cursor:pointer;
height:15px;
margin-right:5px;
width:15px;
}

#gl_moorotator .control-prev,div#frame div.button#left:hover,div#frame div.button#left.hover,div#frame div.button#right:hover,div#frame div.button#right.hover,#gl_mooticker .control-prev {
background-position:0 0;
}

#gl_moorotator .control-next,#gl_mooticker .control-next {
background-position:0 -17px;
}

.blocklist ul {
list-style:none;
margin:0;
padding:0;
}

div .html,div .css {
height:300px;
min-height:100px;
overflow:auto;
width:auto;
}

.story-body li,.gl_moomenu,.gl_moomenu *,.story-footer p,.story-information p {
margin:0;
padding:0;
}

.gftool-tip {
color:#fff;
width:200px;
overflow:hidden;
z-index:13000;
}

.gftool-title {
font-weight:700;
font-size:11px;
color:#679EF1;
background:url(images/gl_mootip_bg200.png) top left;
margin:0;
padding:8px 8px 4px;
}

.gftool-text {
font-size:11px;
background:url(images/gl_mootip_bg200.png) bottom right;
padding:4px 8px 8px;
}
/*
Default style for the nogray calendar
the default class prefix is ng-

made by Wesam Saif
http://www.nogray.com
support@nogray.com

*/

.ng-cal-header-table {
margin:5px;
border-collapse:collapse;
background:#4D77CC;
border:solid #CCCCCC 1px;
}
.ng-cal-previous-td, .ng-cal-next-td {
width:20px;
height:20px;
color:#FFF;
text-align:center;
}
.ng-cal-header-td {
text-align:center;
font-weight:bold;
padding:3px;
color:#FFF;
}
.ng-cal {
border:solid #DAE0ED 1px;
border-collapse:collapse;
margin:5px auto;
margin-top:-5px;
margin-top:0px;
background-color:#FFFFFF;
text-align:center;
}
.ng-cal * {
font-size:8pt;
}
.ng-cal td {
padding:3px;
border:solid #DAE0ED 1px;
}
.ng-cal .ng-days-name-td {
background:#DAE0ED;
border:solid #DAE0ED 1px;
}
.ng-month-name-th {
background:#4D77CC;
font-weight:bold;
padding:3px;
color:#ffffff;
text-align:center;
display:none;
}
.ng-weekend, .ng-dayOff, .ng-dateOff {color:#999999;}
.ng-outOfRange {
color:#999999;
background:#efefef;
text-decoration:line-through;
}
.ng-mouse-over {
font-weight:bold;
background:#DAE0ED;
}
.ng-selected-day {
background:#CCCCCC;
font-weight:bold;
}
.ng-close-link, .ng-clear-link  {
padding:3px;
text-align:center;
color:#666666;
text-decoration:none;
font-size:8pt;
background:#efefef;
border:solid #cccccc 1px;
float:right;
margin-right:5px;
}

